done with styling ready to submit

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
     <title>Fitness Trackr</title>
   </head>
   <body>
-    <div id="root">hi I'm app</div>
+    <div id="root"></div>
   </body>
 </html>
